[project]
name = "afdian_pay"
version = "0.1.0"
description = ""
authors = [
    {name = "盐粒 Yanli", email = "mail@yanli.one"},
]
dependencies = [
    "httpx>=0.26.0",
    "datetime>=5.4",
    "msgspec>=0.18.5",
    "psycopg-pool>=3.2.1",
    "flask>=3.0.1",
    "psycopg[binary]>=3.1.17",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
target-version = "py39"
logger-objects = ["utils.logger.logger"]
[tool.ruff.lint]
select = ["E", "F", "G", "B", "I", "SIM", "TID", "PL", "RUF"]
ignore = ["E501", "RUF001"]
[tool.ruff.lint.isort]
known-first-party = ["setulib_nt", "utils", "proteus"]
[tool.ruff.pylint]
max-args = 7